# advent-of-code

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
aoc2021/: day_04.py  day_14.py  day_15.py  day_18.py  day_19.py  day_20.py  day_21.py  day_23.py  util.py
aoc2023/: __main__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  util.py
notebooks/: 2023_day_24_scratch.ipynb
scripts/: new_year.sh
src/: cli.rs  input.rs  lib.rs  main.rs  range.rs  runner.rs  solver.rs  testing.rs
src/aoc/: __main__.py  run.py  util.py
src/aoc/aoc2015/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  run.py  util.py
src/aoc/aoc2019/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  intcode.py
src/aoc/aoc2020/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
src/aoc/aoc2021/: __init__.py  day_08.py  day_09.py  day_16.py  day_19.py  day_25.py  run.py  util.py
src/aoc/aoc2022/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py
src/aoc/aoc2023/: __init__.py  day_04.py  day_09.py  day_10.py  day_11.py  day_13.py  day_15.py  day_16.py  day_19.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  run.py  util.py
src/aoc/aoc2024/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  (+14 more)
src/aoc2021/: day_20.py  day_22.py
src/aoc2023/: __main__.py
src/util/: mod.rs
src/years/: mod.rs
tests/: test_2015.py  test_2019.py  test_2019_intcode.py  test_2020.py  test_2021.py  test_2022.py  test_2023.py  test_2024.py
(+27 files in other folders)
