[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to Advent of Code puzzles. https://adventofcode.com"
authors = ["John Flavin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
pyperclip = "^1.8.2"
networkx = "^3.2"

[tool.poetry.dev-dependencies]
black = "^23"
pytest = "^7"
pre-commit = "^3"
flake8 = "^6"
mypy = "^1"
types-requests = "^2.26.1"
ipython = "^8"

[tool.black]
target-version =['py311']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
