[build-system]
requires = ["setuptools"]

[project]
name = "advent-of-code"
version = "2024.0"
description = "Solutions to Advent of Code puzzles. https://adventofcode.com"
authors = [
    {"name"="John Flavin"}
]
license = {"text" = "MIT"}
dependencies = [
    "requests>=2.26.0",
    "pyperclip>=1.8.2",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "black[d]",
    "pytest",
    "ipython",
]

[tool.black]
target-version =['py313']
